--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,8 @@
+
+// Import bootstrap
+@import '~bootstrap/scss/bootstrap.scss';
+
+// Custom code
 .jumbotron {
     padding-top: 3rem;
     padding-bottom: 3rem;
