Updated view to new design with added description

--- a/src/style.scss
+++ b/src/style.scss
@@ -63,3 +63,26 @@ footer p {
 .code {
     width: 100%;
 }
+
+.sidebar {
+    border-right: 1px solid #eee;
+}
+
+.nav-divider {
+    border-bottom: 1px solid #eee;
+    padding-top: 5px;
+    margin-bottom: 5px;
+}
+
+.header {
+    border-bottom: 1px solid #eee;
+    padding: 10px 0 15px 0;
+}
+
+h4 {
+    padding: 10px 0 5px 0;
+}
+
+h5 {
+    padding: 15px 0 5px 0;
+}
