--- a/src/style.scss
+++ b/src/style.scss
@@ -1,14 +1,19 @@
 
 // Import bootstrap
 @import '~bootstrap/scss/bootstrap.scss';
+@import "~nr1-bootstrap-theme/dist/main.css";
 
-// Custom code
+#root {
+    background-color: white !important;
+}
+
 .jumbotron {
     padding-top: 3rem;
     padding-bottom: 3rem;
     margin-bottom: 0;
     background-color: #fff;
 }
+
 @media (min-width: 768px) {
     .jumbotron {
         padding-top: 6rem;
@@ -79,10 +84,22 @@ footer p {
     padding: 10px 0 15px 0;
 }
 
+header a:hover {
+    text-decoration: none;
+}
+
+h1 {
+    font-size: 2em;
+}
+
 h4 {
     padding: 10px 0 5px 0;
 }
 
 h5 {
     padding: 15px 0 5px 0;
+}
+
+.text-small {
+    font-size: 0.8em;
 }
