--- a/src/style.scss
+++ b/src/style.scss
@@ -3,10 +3,6 @@
 @import '~bootstrap/scss/bootstrap.scss';
 @import "~nr1-bootstrap-theme/dist/main.css";
 
-#root {
-    background-color: white !important;
-}
-
 .jumbotron {
     padding-top: 3rem;
     padding-bottom: 3rem;
@@ -102,4 +98,9 @@ h5 {
 
 .text-small {
     font-size: 0.8em;
+}
+
+.description {
+    background-color: #eee;
+    padding: 10px;
 }
