Added a requirements check

--- a/nerdlets/nerdlet-nerdlet/styles.scss
+++ b/nerdlets/nerdlet-nerdlet/styles.scss
@@ -120,3 +120,11 @@ ul li {
     border: 1px solid #ccc;
     padding: 5px;
 }
+
+.text-green {
+    color: green;
+}
+
+.text-red {
+    color: red;
+}
