Improved design of tool page

--- a/nerdlets/nerdlet-nerdlet/styles.scss
+++ b/nerdlets/nerdlet-nerdlet/styles.scss
@@ -132,3 +132,11 @@ ul li {
 .custom-textfield {
     width: 100%;
 }
+
+.custom-spinner {
+    height: 50px;
+}
+
+.custom-align-right {
+    text-align: right;
+}
