Added preview warning

--- a/packages/website/src/style.scss
+++ b/packages/website/src/style.scss
@@ -100,6 +100,10 @@ h5 {
     font-size: 0.8em;
 }
 
+.text-red {
+    color: red;
+}
+
 .description {
     background-color: #eee;
     padding: 10px;
