Removed bootstrap from View

--- a/packages/nerdlet/nerdlets/nerdlet-nerdlet/styles.scss
+++ b/packages/nerdlet/nerdlets/nerdlet-nerdlet/styles.scss
@@ -31,6 +31,10 @@ a:hover {
     padding-top: 15px;
 }
 
+.padding-bottom {
+    padding-bottom: 15px;
+}
+
 .custom-spinner {
     height: 50px;
 }
