Added link to raw json on Json export

--- a/packages/nerdlet/nerdlets/nerdlet-nerdlet/styles.scss
+++ b/packages/nerdlet/nerdlets/nerdlet-nerdlet/styles.scss
@@ -96,3 +96,11 @@ a:hover {
 .terraform {
     max-width: 400px;
 }
+
+
+/*
+    Used on
+*/
+.custom-export-json-link {
+    padding: 5px 0 5px 16px;
+}
