Small design change on home

--- a/nerdlets/nerdlet-nerdlet/styles.scss
+++ b/nerdlets/nerdlet-nerdlet/styles.scss
@@ -59,6 +59,9 @@ a:hover {
 .list-view {
     background: #f7f7f8;
     padding: 10px;
+    margin-left: 0px;
+    margin-right: 0px;
+    width: 100%;
 }
 
 /*
