Added links to Github in sidebar

--- a/nerdlets/nerdlet-nerdlet/styles.scss
+++ b/nerdlets/nerdlet-nerdlet/styles.scss
@@ -84,6 +84,17 @@ a:hover {
     width: 100%;
 }
 
+.links {
+
+    padding-top: 10px;
+    list-style-type: square;
+
+    li {
+        margin-left: 20px;
+    }
+
+}
+
 /*
     Used on Preview.js
 */
