--- a/nerdlets/landing/styles.scss
+++ b/nerdlets/landing/styles.scss
@@ -1,67 +1,4 @@
-/*
-    General
-*/
-
-// Because we wrap buttons with Link for React router, we need to disable the underline link
-a:hover {
-    text-decoration: none !important;
-}
-
-
-/*
-    General helpers
-*/
-.text-green {
-    color: green;
-}
-
-.text-red {
-    color: red;
-}
-
-.text-right {
-    text-align: right;
-}
-
-.text-center {
-    text-align: center;
-}
-
-.padding-top {
-    padding-top: 15px;
-}
-
-.padding-bottom {
-    padding-bottom: 15px;
-}
-
-.padding-left {
-    padding-left: 15px;
-
-    ul li {
-        margin-left: 15px;
-    }
-}
-
-.margin-top {
-    margin-top: 15px;
-}
-
-.custom-spinner {
-    height: 50px;
-}
-
-.custom-textfield {
-    width: 100%;
-}
-
-.background-grey {
-    background: #f7f7f8;
-}
-
-.background-white {
-    background: #fff;
-}
+@import "../shared.scss";
 
 /*
     Used on App.js
