fix: design problems from switching to multiple nerdlets

--- a/nerdlets/shared.scss
+++ b/nerdlets/shared.scss
@@ -56,3 +56,20 @@
 .background-white {
     background: #fff;
 }
+
+/*
+    Helper for positioning the loading spinner
+*/
+.loading {
+    padding-top: 50px;
+    height: 100px;
+}
+
+/*
+    List view
+*/
+.list-view {
+    background: #f7f7f8;
+    padding: 10px;
+}
+
